# swift-esp32c6-monoui

./: CLAUDE.md  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  Package.resolved  Package.swift
main/Source/App/: App.swift  M5StackC6LU8g2Driver.swift  Pages.swift
main/Source/Support/include/: i2c.h  module.modulemap  rtos_utils.h  spi.h  support.h  uart.h
main/Source/Support/src/: i2c.c  rtos_utils.c  spi.c  uart.c
